chore: process evaluation job synchronously